Bug fixes and smoother JS
easier to traverse site and bug fixes with JS

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
 	
 
 	<body>
-		<header>
+		<header >
 			<div id="leftSide"> 
 				<h1 id="name_big">
 					Tom Cocozzello
@@ -48,6 +48,7 @@
 					</li>
 				</ul>
 			</div>
+
 		</header>
 			
 		<section id="datBody">
@@ -56,21 +57,14 @@
 			</div>
 			
 			<div class="bodyRightSide" id="datBodyRightSide">
-
 				<p id="hello">Hello,</p>
 				<p id="aboutMe">A little about me:</p>	
-				<div>
 					<div id="resume_button2" class="color" style="background-image: url(images/Blue.png)">My Resume</div>
-				<br/>
-				<div>
+					<br/>
 					<div id="contact_button" class="color" style="background-image: url(images/dGreen.png)">Contact</div>
-				</div>
-				<br/>
-				<div>
+					<br/>
 					<div id="download_button" class="color" style="background-image: url(images/green.png)">Download</div>
-				</div>
 			</div>
-		</div>
 			<div id="meParagraph">
 				<p >My name is Tom Cocozzello, and I will be graduating from North Dakota State University in May 2015.  Throughout my college career, I have come to realize I am not like most of my colleagues.  I break the classic computer scientist stereotype by being an outdoorsman. I am an avid mountain biker, thrill seeking snowboarder, and relaxed fisherman.  Although my interests may go against the grain of fellow scientists, I am just as passionate about computer programming.  In my free time, I typically have at least one side project in the works.  Professional and personal improvement is highly important to me, and I thrive when faced with a challenge.  I am eager to learn new material and work on difficult projects. </p>
 				<br>
@@ -410,7 +404,7 @@
 
 
 
-		<footer>
+		<footer id="foot">
 			<ul id="linkFooter">
 					<li >
 					<div>
