Fixed interaction between JS API call and CSS

--- a/html/index.html
+++ b/html/index.html
@@ -299,8 +299,7 @@
 						</li>
 					</ul>
 				</div>
-					<table id="gitTable" class="resume_table">
-						
+					<table id="gitTable">
 					</table>
 			</div>
 
