--- a/html/Resume_printer.html
+++ b/html/Resume_printer.html
@@ -23,10 +23,10 @@
 			table{
 				width: 100%;
 			}
-			#tableLeftRight tr + td {
+			.tableLeftRight tr + td {
 				text-align: left;
 			}
-			#tableLeftRight tr td + td {
+			.tableLeftRight tr td + td {
 				text-align: right;
 			}
 			h2{
@@ -39,10 +39,10 @@
 			ul{
 				padding-left: 1em;
 			}
-			#subHeader{
+			.subHeader{
 				font-style: italic;
 			}
-			@media (max-width - 200px){
+			@media (max-width: 200px){
 				body{ padding: 2em 5em 2em 5em;}
 			}
 		</style>
@@ -54,7 +54,7 @@
 		<h1 id="name">
 			Thomas Cocozzello
 		</h1>
-		<table id="tableLeftRight">
+		<table class="tableLeftRight">
 			<tr>
 				<td >
 					1820 Dakota Drive North Apt. 308
@@ -75,7 +75,7 @@
 		<h2>
 			EDUCATION
 		</h2>
-		<table id="tableLeftRight">
+		<table class="tableLeftRight">
 			<tr style="font-weight: bold;">
 				<td >
 					North Dakota State University 
@@ -85,7 +85,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td id="subHeader">
+				<td class="subHeader">
 					Bachelors in Computer Science
 				</td>
 				<td>
@@ -99,7 +99,7 @@
 				GPA: 3.4/4.0
 			</li>
 		</ul>
-		<table id="tableLeftRight">
+		<table class="tableLeftRight">
 			<tr style="font-weight: bold;">
 				<td >
 					Normandale Community College  
@@ -109,7 +109,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td id="subHeader">
+				<td class="subHeader">
 					Associates in Art
 				</td>
 				<td>
@@ -125,7 +125,7 @@
 		</ul>
 		
 		<h2>EXPERIENCE</h2>
-			<table id="tableLeftRight">
+			<table class="tableLeftRight">
 				<tr style="font-weight: bold;">
 					<td >
 						Cargill  
@@ -135,7 +135,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td id="subHeader">
+					<td class="subHeader">
 						Enterprise Content Management Intern
 					</td>
 					<td>
@@ -156,7 +156,7 @@
 			</ul>
 
 
-			<table id="tableLeftRight">
+			<table class="tableLeftRight">
 				<tr style="font-weight: bold;">
 					<td >
 						North Dakota State University ITS Department
@@ -166,7 +166,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td id="subHeader">
+					<td class="subHeader">
 						IT Consultant
 					</td>
 					<td>
@@ -188,9 +188,9 @@
 
 
 
-				<table id="tableLeftRight">
+				<table class="tableLeftRight">
 				<tr >
-					<td id="subHeader">
+					<td class="subHeader">
 						Asset Management Assistant
 					</td>
 					<td >
@@ -215,7 +215,7 @@
 			ACTIVITES AND AWARDS
 		</h2>
 
-			<p id="subHeader">Languages</p>
+			<p class="subHeader">Languages</p>
 			
 			<table>
 				<tr>
@@ -281,7 +281,7 @@
 			</table>
 
 
-			<p id="subHeader">Awards</p>
+			<p class="subHeader">Awards</p>
 			<ul>
 				<li>
 					3rd for the Tri-College Region in the International Collegiate Programming Contest (ACM-ICPC) 
@@ -290,7 +290,7 @@
 					Kudos Award (Given to NDSU employees)
 				</li>
 			</ul>
-			<p id="subHeader">Awards</p>
+			<p class="subHeader">Awards</p>
 			<ul>
 				<li>
 					Programming Competitions
@@ -309,7 +309,7 @@
 				VOLUNTEERING
 			</h2>
 
-			<table id="tableLeftRight">
+			<table class="tableLeftRight">
 				<tr style="font-weight: bold;">
 					<td >
 						Matter (formerly Hope for the City) 
@@ -319,7 +319,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td id="subHeader">
+					<td class="subHeader">
 						Local Hunger Initiative
 					</td>
 					<td>
