add background image to header

--- a/html/index.html
+++ b/html/index.html
@@ -18,34 +18,37 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="Script/Movement.js"></script>
 		<script src="Script/GitRequest.js"></script>
+		<script src="Script/script.js"></script>
 
 	</head>
 	
 
 	<body>
 		<header >
-			<div id="leftSide"> 
-				<h1 id="name_big">
-					Tom Cocozzello
-				</h1>
-				<img id="name_small" src="images/logo.ico" alt="name small">
-				<h3>Software Developer</h3>
-			</div>
-			<div id="rightSide">
-				<ul id="links">
-					<li>
-						<a id="projects_button" >Projects</a>
-					</li>
-					<li>
-						<a id="skills_button">My Skills</a>
-					</li>
-					<li>
-						<a  id="resume_button" >Resume</a>
-					</li>
-					<li>
-						<a id="header_top_button">Top</a>
-					</li>
-				</ul>
+			<div id="header_overlay">
+				<div id="leftSide"> 
+					<h1 id="name_big">
+						Tom Cocozzello
+					</h1>
+					<img id="name_small" src="images/logo.ico" alt="name small">
+					<h3>Software Developer</h3>
+				</div>
+				<div id="rightSide">
+					<ul id="links">
+						<li>
+							<a id="projects_button" >Projects</a>
+						</li>
+						<li>
+							<a id="skills_button">My Skills</a>
+						</li>
+						<li>
+							<a  id="resume_button" >Resume</a>
+						</li>
+						<li>
+							<a id="header_top_button">Top</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 
 		</header>
