fix html linter errors

--- a/html/index.html
+++ b/html/index.html
@@ -361,7 +361,8 @@
 								2014
 							</td>
 							<td class="resume_table_rightside">
-								Local Hunger Initiative @ <a href="http://mattermore.org/">Matter (formerly Hope for the City)</a>
+								Local Hunger Initiative @
+								<a href="http://mattermore.org/">Matter (formerly Hope for the City)</a>
 								<br /><br />
 
 							</td>
@@ -371,7 +372,8 @@
 								2015
 							</td>
 							<td class="resume_table_rightside">
-								 IBM eWeek to promote Eningeering in local schools W/ <a href="http://ibm.com/">IBM</a>
+								 IBM eWeek to promote Eningeering in local schools W/
+								 <a href="http://ibm.com/">IBM</a>
 								<br /><br />
 							</td>
 						</tr>
@@ -413,7 +415,7 @@
 								-->
 								<div class="wrapper">
 								  	<span class="square individual">
-								   		<a id="download_icon" class="ninth before after" href="documents/Tom%20Cocozzello%20Resume.docx">Word Document</a>
+								   		<a class="download_icon ninth before after" href="documents/Tom%20Cocozzello%20Resume.docx">Word Document</a>
 								  	</span>
 								</div>
 
@@ -424,7 +426,7 @@
 								-->
 								<div class="wrapper">
 								  	<span class="square individual">
-								   		<a id="download_icon" class="ninth before after" href="documents/Tom%20Cocozzello%20Resume.pdf">PDF</a>
+								   		<a class="download_icon ninth before after" href="documents/Tom%20Cocozzello%20Resume.pdf">PDF</a>
 								  	</span>
 								</div>
 							</td>
@@ -434,7 +436,7 @@
 								-->
 								<div class="wrapper">
 								  	<span class="square individual">
-								   		<a id="download_icon" class="ninth before after" href="Resume_printer.html">HTML</a>
+								   		<a class="download_icon ninth before after" href="Resume_printer.html">HTML</a>
 								  	</span>
 								</div>
 							</td>
@@ -485,6 +487,3 @@
 
 	</body>
 </html>
-
-
-
