--- a/html/Resume_printer.html
+++ b/html/Resume_printer.html
@@ -5,47 +5,7 @@
 		<meta charset="utf-8">
 		<title>Resume</title>
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Marko+One">
-
-		<style type="text/css">
-			body{
-				font-size: 100%;
-				padding: 2em 15% 2em 15%;
-				font-family: serif;
-
-			}
-			 table,h1, h2, ul, tr, td, ol, li, p {
-				margin: 0 0 0 0;
-				padding: 0 0 0 0;
-			}
-			#name {
-				text-align: center;
-			}
-			table{
-				width: 100%;
-			}
-			.tableLeftRight tr + td {
-				text-align: left;
-			}
-			.tableLeftRight tr td + td {
-				text-align: right;
-			}
-			h2{
-				padding: .3em 0em 0em 0em;
-				text-align: left;
-				font-size: 1em;
-				border-bottom: 1px solid;
-				text-transform: uppercase;
-			}
-			ul{
-				padding-left: 1em;
-			}
-			.subHeader{
-				font-style: italic;
-			}
-			@media (max-width: 200px){
-				body{ padding: 2em 5em 2em 5em;}
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="CSS/resume_printer.css">
 
 	</head>
 
@@ -57,7 +17,7 @@
 		<table class="tableLeftRight">
 			<tr>
 				<td >
-					1820 Dakota Drive North Apt. 308
+					3025 Avalon Cove Court NW
 				</td>
 				<td >
 					612-719-0942
@@ -65,7 +25,7 @@
 			</tr>
 			<tr>
 				<td>
-					Fargo, ND 58102
+					Rochester, MN 55901
 				</td>
 				<td>
 					thomas.cocozzello@gmail.com
@@ -78,10 +38,10 @@
 		<table class="tableLeftRight">
 			<tr style="font-weight: bold;">
 				<td >
-					North Dakota State University 
+					North Dakota State University
 				</td>
 				<td >
-					Fargo, North Dakota 
+					Fargo, North Dakota
 				</td>
 			</tr>
 			<tr>
@@ -102,7 +62,7 @@
 		<table class="tableLeftRight">
 			<tr style="font-weight: bold;">
 				<td >
-					Normandale Community College  
+					Normandale Community College
 				</td>
 				<td >
 					Bloomington, Minnesota
@@ -123,38 +83,56 @@
 				GPA: 3.4/4.0
 			</li>
 		</ul>
-		
+
 		<h2>EXPERIENCE</h2>
 			<table class="tableLeftRight">
 				<tr style="font-weight: bold;">
 					<td >
-						Cargill  
+						IBM
 					</td>
 					<td >
-						Hopkins, Minnesota
+						Rochester, Minnesota
 					</td>
 				</tr>
 				<tr>
 					<td class="subHeader">
-						Enterprise Content Management Intern
+						IBM Container Cloud Pipeline Developer
 					</td>
 					<td>
-						May 2014 – Aug 2014
+						June 2016 – Present
 					</td>
 				</tr>
 			</table>
 			<ul>
 				<li>
-					Researched the current electronic signature market and see how an electronic/digital signature capability can align with Cargill’s current infrastructure
+					Working with DevOps practices to help create the deployment pipeline for the IBM Container Cloud.
 				</li>
 				<li>
-					Gained extensive experience with digital cryptography
+					Main tools used are Ansible, Python, Go, Jenkins, Slack
 				</li>
 				<li>
-					Prototyped an electronic signature solution and demonstrate its capabilities to leadership
-				</li>	
+					The pipeline is a gating system to vet bugs before code reaches production environments.
+				</li>
 			</ul>
 
+			<table class="tableLeftRight">
+				<tr>
+					<td class="subHeader">
+						Upstream OpenStack Developer (Keystone, Glace)
+					</td>
+					<td>
+						June 2015 – June 2016
+					</td>
+				</tr>
+			</table>
+			<ul>
+				<li>
+					I was one of the top code reviewers in both projects and I was well on my way to be the Keystone/Glance cross project liaison
+				</li>
+				<li>
+					Working with OpenStack was a great learning experience, it being one of the largest python projects with great coding standards. It was perfect position to help me understand coding practices in the industry. From setting up a python project and correctly writing unit and function tests to better understanding how API's and CLI's work Keystone and Glace definitely sculpted me into a better developer.
+				</li>
+			</ul>
 
 			<table class="tableLeftRight">
 				<tr style="font-weight: bold;">
@@ -183,7 +161,7 @@
 				</li>
 				<li>
 					Scan in and process tests for professors
-				</li>	
+				</li>
 			</ul>
 
 
@@ -197,18 +175,18 @@
 						Aug 2012 – May 2013
 					</td>
 				</tr>
-				
+
 			</table>
 			<ul>
 				<li>
 					Gained experience testing and troubleshooting software installations on various operating systems
 				</li>
 				<li>
-					Attend to detail while processing documents and linking documents using the ImageNow software  
+					Attend to detail while processing documents and linking documents using the ImageNow software
 				</li>
 				<li>
 					Utilized strong communication skills when assisting NDSU students, staff, and faculty with a wide variety of software questions
-				</li>	
+				</li>
 			</ul>
 
 		<h2>
@@ -216,13 +194,13 @@
 		</h2>
 
 			<p class="subHeader">Languages</p>
-			
+
 			<table>
 				<tr>
 					<td>
 						<ul>
 							<li>
-								C
+								Python
 							</li>
 						</ul>
 					</td>
@@ -273,7 +251,7 @@
 					<td>
 						<ul>
 							<li>
-								Scheme
+								Go
 							</li>
 						</ul>
 					</td>
@@ -284,27 +262,48 @@
 			<p class="subHeader">Awards</p>
 			<ul>
 				<li>
-					3rd for the Tri-College Region in the International Collegiate Programming Contest (ACM-ICPC) 
+					3rd for the Tri-College Region in the International Collegiate Programming Contest (ACM-ICPC)
 				</li>
 				<li>
 					Kudos Award (Given to NDSU employees)
 				</li>
 			</ul>
-			<p class="subHeader">Awards</p>
-			<ul>
-				<li>
-					Programming Competitions
-				</li>
-				<li>
-					Academic Computing Machinery (ACM)
-				</li>
-				<li>
-					Mobile Development Special Interest Group in the ACM
-				</li>
-				<li>
-					Security Special Interest Group in the ACM 
-				</li>
-			</ul>
+			<p class="subHeader">Activities</p>
+			<table>
+				<tr>
+					<td>
+						<ul>
+							<li>
+								Full Stack Mobile Development
+							</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>
+								Family IT  ;)
+							</li>
+						</ul>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul>
+							<li>
+								Full Stack Web Development
+							</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>
+								Programming Competitions
+							</li>
+						</ul>
+					</td>
+				</tr>
+			</table>
+
 			<h2>
 				VOLUNTEERING
 			</h2>
@@ -312,7 +311,40 @@
 			<table class="tableLeftRight">
 				<tr style="font-weight: bold;">
 					<td >
-						Matter (formerly Hope for the City) 
+						IBM eWeek
+					</td>
+					<td >
+						Rochester, Minnesota
+					</td>
+				</tr>
+				<tr>
+					<td class="subHeader">
+						Promote Engineering in a Local School
+					</td>
+					<td>
+						2016
+					</td>
+				</tr>
+
+				<tr style="font-weight: bold;">
+					<td >
+ 						IBM Day of Caring
+					</td>
+					<td >
+						Rochester, Minnesota
+					</td>
+				</tr>
+				<tr>
+					<td class="subHeader">
+						Clean Up Local Hospice House and Landscaping
+					</td>
+					<td>
+						2016
+					</td>
+				</tr>
+				<tr style="font-weight: bold;">
+					<td >
+						Matter (formerly Hope for the City)
 					</td>
 					<td >
 						Hopkins, Minnesota
@@ -327,16 +359,5 @@
 					</td>
 				</tr>
 			</table>
-			<!--
-				<h2>
-					PROJECTS
-				</h2>
-				<table>
-					
-				</table>
-			-->
 	</body>
 </html>
-
-
-
