add google anylitics

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,13 @@
 		<script src="Script/Movement.js"></script>
 		<script src="Script/GitRequest.js"></script>
 		<script src="Script/script.js"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
 
+			gtag('config', 'UA-58622032-1');
+		</script>
 	</head>
 
 
