update resume and photo

--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
 
 		<section id="datBody">
 			<div id="datBodyLeftSide">
-				<img id="face" src="images/me.png" alt="me">
+				<img id="face" src="images/meNew.png" alt="me">
 			</div>
 
 			<div class="bodyRightSide" id="datBodyRightSide">
@@ -77,7 +77,7 @@
 				<p >My name is Tom Cocozzello, and I graduated from North Dakota State University with a Bachelor of Science in Computer Science and a minor in Management Information Systems. Throughout my college and work career, I have come to realize I am not like most of my colleagues.  I break the classic computer scientist stereotype by being an outdoorsman. I am an avid mountain biker, thrill seeking snowboarder, and relaxed fisherman.  Although my interests may go against the grain of fellow scientists, I am just as passionate about computer programming.  In my free time, I typically have at least one side project in the works.  Professional and personal improvement is highly important to me, and I thrive when faced with a challenge.  I am eager to learn new material and work on difficult projects. </p>
 				<br>
 				<p>
-				With my intrinsic motivation and love of programming, I am excited to apply my knowledge and skills as I start my career.
+				With my intrinsic motivation and love of programming, I am excited to apply my knowledge and skills to your company.
 				</p>
 				<br>
 			</div>
@@ -173,18 +173,32 @@
 						</li>
 					</ul>
 				</div>
+				<table class="resume_table">
+						<tr>
+							<td class="resume_table_leftside" >
+								December 2018 – Current
+							</td>
+							<td class="resume_table_rightside">
+								Senior Software Eningeer @ <a href="https://docs.oracle.com/en/operating-systems/olcne/">Oracle</a>
+								<br /><br />
+								<ul>
+									<li><p>Working in Linux and Virtualization group. I am focussed on creating a deployer for a suite of Open Source Cloud Native applications on the Oracle Linux operating system. As of today the suite deploys Kubernetes + cri-o, Istio and Prometheus as per the best practices we research and define.</p></li>
+								</ul>
+							</td>
+						</tr>
+					</table>
 					<table class="resume_table">
 						<tr>
 							<td class="resume_table_leftside" >
-								June 2016 – Present
+								June 2016 – November 2018
 							</td>
 							<td class="resume_table_rightside">
-								IBM Container Cloud Pipeline Developer @ <a href="http://www.ibm.com/">IBM</a>
+								Software Eningeer on the IBM Kubernetes Service @ <a href="https://www.ibm.com/cloud/kubernetes-service">IBM</a>
 								<br /><br />
 								<ul>
-									<li><p>Working with DevOps practices to help create the deployment pipeline for the IBM Container Cloud.</p></li>
-									<li><p>Main tools used are Ansible, Python, Go, Git, Bash, Jenkins, Slack</p></li>
-									<li><p>The pipeline is a gating system to vet bugs before code reaches production environments.</p></li>
+									<li><p>My team and I develop and manage the IBM Cloud Container Service’s Network Orchestration Microservice, Loadbalancer, Kubernetes Cloud Provider, Calico and VPN.</p></li>
+									<li><p>Develop and maintain a microservice to order, generate and deploy network configurations into the customer’s Kubernetes cluster. (Written in Go)</p></li>
+									<li><p>Main tools used are Go, Kubernetes, Python, Bash, Kibana, Prometheus, Git, Jenkins, Slack</p></li>
 								</ul>
 							</td>
 						</tr>
@@ -223,7 +237,7 @@
 					<table class="resume_table">
 						<tr>
 							<td class="resume_table_leftside" >
-								2013 - Current
+								2013 - 2014
 							</td>
 							<td class="resume_table_rightside">
 								IT Consultant @ <a href="http://www.ndsu.edu/its/">North Dakota State University ITS Department</a>
