rename resume resources

--- a/html/index.html
+++ b/html/index.html
@@ -435,7 +435,7 @@
 								-->
 								<div class="wrapper">
 								  	<span class="square individual">
-								   		<a class="download_icon ninth before after" href="documents/Tom%20Cocozzello%20Resume.docx">Word Document</a>
+								   		<a class="download_icon ninth before after" href="documents/TomCocozzelloResume.docx">Word Document</a>
 								  	</span>
 								</div>
 
@@ -446,7 +446,7 @@
 								-->
 								<div class="wrapper">
 								  	<span class="square individual">
-								   		<a class="download_icon ninth before after" href="documents/Tom%20Cocozzello%20Resume.pdf">PDF</a>
+								   		<a class="download_icon ninth before after" href="documents/TomCocozzelloResume.pdf">PDF</a>
 								  	</span>
 								</div>
 							</td>
