obfuscate some person info
disable facebook url
hide telephone number
remove email 'mailto' as well as update the email

--- a/html/index.html
+++ b/html/index.html
@@ -437,32 +437,27 @@
             </li>
           </ul>
         </div>
+         <!--
+            This is a CSS Tutorial online; http://codepen.io/brenden/pen/RNZXqx
+        -->
         <table class="resume_table">
           <tr>
-            <td style="width: 33%; text-align: center;">
-              <!--
-                                  This is a CSS Tutorial online; http://codepen.io/brenden/pen/RNZXqx
-                              -->
+            <!-- <td style="width: 33%; text-align: center;">
               <div class="wrapper">
                 <span class="square individual">
                   <a class="download_icon ninth before after" href="documents/TomCocozzelloResume.docx">Word Document</a>
                 </span>
               </div>
-            </td>
-            <td style="width: 33%; text-align: center;">
-              <!--
-                                  This is a CSS Tutorial online; http://codepen.io/brenden/pen/RNZXqx
-                              -->
+            </td> -->
+            <td style="width: 50%; text-align: center;">
+
               <div class="wrapper">
                 <span class="square individual">
                   <a class="download_icon ninth before after" href="documents/TomCocozzelloResume.pdf">PDF</a>
                 </span>
               </div>
             </td>
-            <td style="width: 33%; text-align: center;">
-              <!--
-                                  This is a CSS Tutorial online; http://codepen.io/brenden/pen/RNZXqx
-                              -->
+            <td style="width: 50%; text-align: center;">
               <div class="wrapper">
                 <span class="square individual">
                   <a class="download_icon ninth before after" href="Resume_printer.html">HTML</a>
@@ -489,14 +484,13 @@
         <li>
           <div>
             <p class="footer_title">Email</p>
-            <p><a href="mailto:thomas.cocozzello@gmail.com">thomas.cocozzello@gmail.com</a></p>
+            <p>tom@cocozzello.com</p>
           </div>
         </li>
         <li>
           <div>
             <p class="footer_title">Connect</p>
             <p>
-              <a href="https://www.facebook.com/tom.cocozzello?fref=ts"> <img src="images/facebook.png" alt="facebook" /></a>
               <a href="https://github.com/cocoztho000"><img src="images/github.png" alt="git hub" /></a>
               <a href="https://www.linkedin.com/in/thomas-c-79373299"><img src="images/linkedin.png" alt="linked in" /></a>
             </p>
@@ -505,7 +499,7 @@
         <li>
           <div style="top: 0;">
             <p class="footer_title">Call</p>
-            <p><a href="tel:+16127190942">612-719-0942</a></p>
+            <p>612-7_ONE_9-0942</p>
           </div>
         </li>
       </ul>
